ansible/roles/k3s/cluster/files/argocd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: argocd-ui-ingress
  namespace: argocd
spec:
  rules:
  - host: argocd.cloud.lambacher.eu
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.cloud.lambacher.eu
